# deepagent-template

./: .gitignore  CLAUDE.md  README.md  example.env  langgraph.json  pyproject.toml
.claude/skills/deep-agents-core/: SKILL.md
.claude/skills/deep-agents-memory/: SKILL.md
.claude/skills/deep-agents-orchestration/: SKILL.md
.claude/skills/framework-selection/: SKILL.md
.claude/skills/langchain-dependencies/: SKILL.md
.claude/skills/langchain-fundamentals/: SKILL.md
.claude/skills/langchain-middleware/: SKILL.md
.claude/skills/langchain-rag/: SKILL.md
.claude/skills/langgraph-execution/: SKILL.md
.claude/skills/langgraph-fundamentals/: SKILL.md
.claude/skills/langgraph-persistence/: SKILL.md
.claude/skills/langsmith-dataset/: SKILL.md
.claude/skills/langsmith-dataset/scripts/: generate_datasets.py  generate_datasets.ts  query_datasets.py  query_datasets.ts
.claude/skills/langsmith-evaluator/: SKILL.md
.claude/skills/langsmith-evaluator/scripts/: upload_evaluators.py  upload_evaluators.ts
.claude/skills/langsmith-trace/: SKILL.md
.claude/skills/langsmith-trace/scripts/: query_traces.py  query_traces.ts
src/: config.py
src/agent/: graph.py  subagents.py
src/agents/: deepagent.py  subagents.py
src/prompts/: __init__.py  coordinator-agent.md  research-subagent.md
src/skills/general/web-research/: SKILL.md
src/skills/skill-creator/: SKILL.md
src/skills/skill-creator/scripts/: init_skill.ts  quick_validate.ts
src/skills/tavily/tavily-crawl/: SKILL.md
src/skills/tavily/tavily-extract/: SKILL.md
src/skills/tavily/tavily-map/: SKILL.md
src/skills/tavily/tavily-research/: SKILL.md
src/tools/: tavily.py  view_image.py  web_research.py  web_search_tools.py
src/utils/: __init__.py  workspace.py
tests/: test_config.py  test_graph.py  test_prompts.py
(+1 files in other folders)
